MDEV-19027 create_table_def fails when virtual column is present between stored columns

- create_table_def() misconstructs the dict_table_t by ignoring the stored
columns of the table if virtual column is present between stored columns.